# lacon-rust-parser

./: .gitignore  Cargo.toml  README.MD  concept.lacon  example-list.llacon  example.lacon  include-example-1.llacon  include-example-2.llacon  project.lacon  schema.slacon  schema_use.llacon
examples/: demo.rs
src/: lib.rs  parser.rs  units.rs  value.rs
src-legacy-will-be-replaced/: lib.rs
src-legacy-will-be-replaced/interpretator/prototypes/: mod.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/: mod.rs  prototype.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/object/: mod.rs  object.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/object/routine/: routine.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/object/routine/function/: mod.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/object/routine/procedure/: mod.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/primitive/: mod.rs  nil.rs  operator.rs
src-legacy-will-be-replaced/interpretator/prototypes/types/primitive/number/: mod.rs
src/ast/: mod.rs
src/interpretator/prototypes/types/: mod.rs
src/interpretator/prototypes/types/object/: array.rs  dictionary.rs  mod.rs  multiline_string.rs
src/interpretator/prototypes/types/object/routine/: mod.rs
src/interpretator/prototypes/types/object/routine/function/: function.rs
src/interpretator/prototypes/types/primitive/: auto.rs  none.rs  undefined.rs
src/units/: angle.rs  common.rs  data_size.rs  frequency.rs  length.rs  mod.rs  time.rs
(+1 files in other folders)
