[package]
name = "lacon-rust-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.2"
fancy-regex = "0.17.0"
indexmap = { version = "2.13.0", features = ["serde"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
once_cell = "1.21.3"
unicode-segmentation = "1.12.0"

[lib]
name = "lacon_rust_parser"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
